prettier name print on furbox

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                                 
                                 <!-- 검색버튼 -->
                                 <tr>
-                                    <td class="tableFormLabel"><input type="submit" value="Submit" id="simple_submit_button" onclick="simplequery()" /></td>
-                                    <td><input type="reset" value="Reset" id="simple_reset_button" onclick="clearResults()" /></td>
+                                    <td class="tableFormLabel"><input type="reset" value="Reset" id="simple_reset_button" onclick="clearResults()" /></td>
+                                    <td><input type="submit" value="Submit" id="simple_submit_button" onclick="simplequery()" /></td>
                                 </tr>
                             </table>
                         </td>
