--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </h3>
             <form class="accordion_inner" onsubmit="return false;" method="post" name="simplesearchform">
                  <!-- 테이블로 레이아웃질을 하면 안 되는네 난 너를 믿었던 만큼 난 내 친구도 믿었기에 난 아무런 부담없이 널 내 친구에게 소개시켜 줬고 그런 만남이 있은 후부터 우리는 자주 함께 만나며 즐거운 시간을 보내며 함께 어울렸던 것 뿐인데 그런 만남이 어디서부터 잘못됐는지 난 알 수 없는 예감에 조금씩 빠져들고 있을 때쯤 넌 나보다 내 친구에게 관심을 더 보이며 날 조금씩 멀리하던 그 어느날 -->
-                <table>
+                <table class="simpleBox">
                     <tr>
                         <td>
                             <table id="main_searchform_area">
@@ -189,7 +189,7 @@
         <div class="footershape"></div>
         <div class="footerlogo"></div>
         <p class="p1">퍼슈트검색체계는 MIT License에 따라 배포됩니다.<br>퍼슈트검색체계에 등록된 모든 이미지는 각 이미지의 저작권자에게 저작권이 있습니다.</p>
-        <p class="p2"><a target="_blink" href="mailto:curioustorvald@gmail.com">curioustorvald<mailat></mailat>gmail<maildot></maildot>com</a><br>개발핫산: CuriousTorvald</p>
+        <p class="p2">curioustorvald<mailat></mailat>gmail<maildot></maildot>com<br>개발핫산: CuriousTorvald</p>
     </footer>
     <clipit style="display:block; height:1px"><div id="clipboard_dummy_container" style="display:none">
         <input type="text" id="clipboard_dummy" size="1"></input>
