--- a/statistics.html
+++ b/statistics.html
@@ -90,7 +90,7 @@
             </div></div>
             
             <div class="chart_bgimg" style="flex: 1 1; min-width: 330px"><div id="diy_stats" class="chart_container">
-                <h3 style="padding-left:0.5em">자작 vs 수주</h3>
+                <h3 style="padding-left:0.5em">제작 정보</h3>
                 <table class="stat" id="diy_stat_table">
                     <!-- TO BE FILLED BY THE COMPUTER LORD -->
                 </table>
@@ -134,7 +134,7 @@
         <div id="flex_container" style="display:flex; flex-direction: row;">
             
             <div class="chart_bgimg" style="flex: 1 1; min-width: 720px"><div id="market_share_selected" class="chart_container">
-                <h3 style="padding-left:0.5em">시장 점유율 (연도별, 선택)</h3>
+                <h3 style="padding-left:0.5em">연도별 메이커 데뷔</h3>
                 <table class="stat" id="market_share_stat_table">
                     <!-- TO BE FILLED BY THE COMPUTER LORD -->
                 </table>
