--- a/statistics.html
+++ b/statistics.html
@@ -140,7 +140,7 @@
         </div>
         <div id="flex_container3" style="display:flex; flex-flow: row wrap; overflow: auto;">
             <div class="chart_bgimg" style="flex: 1 1; min-width: 600px"><div id="market_share_selected" class="chart_container">
-                <h3 style="padding-left:0.5em">연도벌 메이커 데뷔</h3>
+                <h3 style="padding-left:0.5em">연도별 메이커 데뷔</h3>
                 <table class="stat" id="market_share_stat_table">
                     <!-- TO BE FILLED BY THE COMPUTER LORD -->
                 </table>
